refactored css: fixed overflow bug on devcard image container

--- a/src/App.css
+++ b/src/App.css
@@ -64,25 +64,26 @@ a {
   color: var(--t-highlight);
   padding: 0.2em;
   margin: 4em;
-  
+  border-radius: 1vw;
+
   display: flex;
   /* max-width: 40%; */
   align-content: center;
   overflow: scroll;
 
-  border-radius: 1vw;
   box-shadow: 0.3em 0.5em 8px var(--b-shadow);
   transition-property: box-shadow;
   transition-duration: 0.6s;
 }
 
 .dev-card-container:hover {
+  color: var(--b-main);
+  background-color: var(--b-highlight-mask);
   box-shadow: 0.2em 0.2em 6px var(--b-shadow);
 }
 
 .dev-profile-pic-container{
   display: flex;
-  width: 100%;
   overflow: hidden;
   padding: 0.5%;
   border-top-left-radius: 6vw;
@@ -104,7 +105,7 @@ a {
   background-color: var(--b-main-mask);
 
   scale: 1.1;
-  /* transform: translateX(4%); */
+  transform: translateX(4%);
   transition: 0.1s linear scale, 0.8s linear transform;
 }
 
